# cdc

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
