[tool.poetry]
name = "cdc"
version = "0.1.0"
description = ""
authors = ["Paulo Aguiar <aguiarlapaulo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"
dot = "^0.3.0"
env = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
